# file-uploader

./: .gitignore  README.md  pyproject.toml
scripts/: make-files.sh  post-local.sh  run-local.sh  start-azurite.sh
src/file_uploader/: app.py
tests/: test_app.py
